--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,11 @@
 CHANGELOG
 =======
 
+1.1.0 (04.12.2018)
+----------------
+
+- change logging of exif denormalization to warning
+
 
 1.0.1 (11.11.2018)
 ----------------
